- widget in no longer aligned to center  - template is now embedded on the directive and no more as a templateUrl

--- a/image-crop-styles.css
+++ b/image-crop-styles.css
@@ -4,8 +4,6 @@
 
 /* Core component styles */
 .ng-image-crop {
-    text-align: center;
-    margin: 0 auto;
     position: relative;
     -webkit-user-select: none;
     -moz-user-select: none;
